k8s/urotaxi-service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: my-deployment-service
# spec:
#   selector:
#     app: urotaxi  # Label selector matching the pods belonging to your deployment
#   ports:
#     - protocol: TCP
#       port: 80  # Port exposed by the service
#       targetPort: 8080  # Port on which your application is running in the pods
#   type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  # namespace: game-2048
  name: my-deployment-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: urotaxi
